issue: fixed line spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,6 +6,7 @@
   box-shadow: 0 0 0 1px inset DarkGray;
   cursor: pointer;
   color: SlateGrey;
+  line-height: 1;
   white-space: nowrap;
 
   &--open {
